# monorepo

./: .bazelignore  .bazelrc  .bazelversion  .bk.yaml  .claude.json  .claude.json.backup  .conflictignore  .daggerignore  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .jscpd.json  .largeignore  .lintstagedrc.js  .markdownlint-cli2.jsonc  .mise.toml  .prettierignore  .quality-baseline.json  .release-please-manifest.json  .trivyignore  AGENTS.md  BUILD.bazel  CLAUDE.md  CLAUDERON_OBSERVABILITY_PLAN.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MODULE.bazel  MULTI_REPO_IMPLEMENTATION_STATUS.md  PROGRESSIVE_DISCLOSURE_IMPLEMENTATION.md  PROGRESSIVE_DISCLOSURE_SUMMARY.md  PROGRESSIVE_DISCLOSURE_TESTING_GUIDE.md  README.md  REPO.bazel  bunfig.toml  dagger.json  docker-bake.hcl  knip.json  lefthook.yml  multitool.lock.json  (+11 more)
.buildkite/: BUILD.bazel  pipeline.yml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.codex/: config.toml
.dagger/: .gitignore  eslint.config.js  eslint.config.ts  package-lock.json  package.json  tsconfig.json
.devcontainer/: setup.sh
.greptile/: config.json  files.json
.husky/: post-checkout  pre-commit
.moon/: tasks.yml  toolchains.yml  workspace.yml
.test-fixtures/: merge-conflict-check.md
ansible-playbook/: .pre-commit-config.yaml  README.md  ansible.cfg  dionysus.yml  hades.yml  inventory.yml  main.yml  requirements.yml  servers.yml  vault_password_file
archive/: README.md
auth-proxy/: README.md  docker-compose.yml  k8s_proxy.py  proxy.py  run-proxy.sh  talos_proxy.py
aws-docker-cdk/: .gitignore  README.md  cdk.context.json  package-lock.json  package.json
camping/: README.md  package.json
dagger/: ci.ts
demo-plugin/: README.md
devcontainers-features/: Earthfile
ec2-instance-restart/: .gitignore  README.md  template.yml
ec2-instance-restart-frontend/: .gitignore  README.md  package-lock.json  package.json  samconfig.toml  template.yml
eng211-research-paper/: .gitignore  bibliography.bib  outline.tex  paper.tex
file-matcher/: .gitignore  README.md
frankie-and-jos-flavor-scraper/: OUTPUT.txt  README.md  SANITIZED_OUTPUT.txt
funsheet/: .gitignore  Procfile  README.md  pom.xml
gpt-2/: Dockerfile
gpt-2-simple-sagemaker-container/: Dockerfile  README.md  build_and_push  requirements.txt  serve
harding-christmas/: .gitignore  .travis.yml  README.md  app.js  package-lock.json  package.json
hue-saber/: .babelrc  .env.sample  .gitignore  README.md
instalike/: .eslintrc  .travis.yml  README.md  index.js  like.js
jukebox/: .gitignore  Cargo.toml
scripts/ci/: eslint.config.ts  package.json  pyproject.toml  tsconfig.json
scripts/ci/src/: catalog.ts  change-detection.ts  main.ts  pipeline-builder.ts  wait-for-greptile.ts
scripts/ci/src/__tests__/: build-age-priority.test.ts  buildkite.test.ts  change-detection.test.ts  dagger-hygiene.test.ts  k8s-plugin.test.ts  lefthook-ci-parity.test.ts  pipeline-builder.test.ts  pipeline-test-helpers.ts  validate-catalog.test.ts  wait-for-greptile.test.ts
scripts/ci/src/change-detection/: buildkite-queries.ts  git-diff.ts  index.ts  renovate.ts  result-builders.ts  shared.ts  special-cases.ts  version-commit.ts
scripts/ci/src/ci/: bazel_package.py  bazel_phase.py  build_and_test.py  clauderon_build.py  clauderon_release.py  clauderon_upload.py  code_review.py  cooklang_build.py  cooklang_create_release.py  cooklang_push.py  cooklang_release.py  deploy.py  deploy_argocd.py  deploy_site.py  homelab_argocd_health.py  homelab_cdk8s.py  homelab_helm_push.py  homelab_release.py  homelab_tofu_stack.py  local.py  pipeline_generator.py  publish.py  publish_npm_package.py  push_image.py  quality_gate.py  release.py  tag_release.py  version_commit_back.py
scripts/ci/src/ci/lib/: argocd.py  bazel.py  buildkite.py  catalog.py  cloudflare.py  compliance.py  config.py  ghcr.py  github.py  helm.py  publish_npm.py  quality.py  r2.py  runner.py  s3.py  tofu.py
scripts/ci/src/ci/local_commands/: argocd_sync.py  clauderon_release.py  cooklang_release.py  helm_push.py  homelab_deploy.py  image_push.py  list_targets.py  npm_publish.py  site_deploy.py  tag_release.py  tofu_apply.py  version_cmd.py
scripts/ci/src/lib/: build-age-priority.ts  buildkite.ts  k8s-plugin.ts  types.ts  validate-catalog.ts
scripts/ci/src/steps/: argocd.ts  build-summary.ts  ci-image.ts  clauderon.ts  code-review.ts  cooklang.ts  helm.ts  images.ts  npm.ts  per-package.ts  quality.ts  release.ts  sites.ts  tofu.ts  version.ts
scripts/ci/tests/: test_buildkite.py  test_catalog.py  test_config.py  test_local_cli.py  test_renovate_regex.py
tools/bazel/: BUILD.bazel  astro_build.bzl  astro_check.bzl  bazel-perf.sh  bazel_lint_check.sh  bazel_sandbox_common.sh  bench-rules-bun.sh  bun_package.bzl  bun_test.bzl  bun_test_entry.cjs  bun_test_runner.sh  cargo_deny.bzl  cargo_deny_runner.sh  eslint.bzl  eslint_entry.cjs  eslint_entry.js  golangci_lint.bzl  golangci_lint_runner.sh  hermeticity_check.sh  jscpd_runner.sh  knip_runner.sh  llvm_cov.bzl  llvm_cov_runner.sh  prisma.bzl  run_npm_script.sh  semgrep.bzl  semgrep_runner.sh  shellcheck.bzl  shellcheck_runner.sh  trivy.bzl  trivy_runner.sh  typecheck.bzl  typecheck_entry.cjs  typecheck_runner.sh  vite_build.bzl  workspace_status.sh
tools/bun/: BUILD.bazel  extensions.bzl  repositories.bzl
tools/ci-image/: BUILD.bazel  download_tools.sh
tools/oci/: BUILD.bazel  Dockerfile.obsidian-headless  bun_service_image.bzl  git_sha_tag.tmpl  obsidian_headless.bzl
tools/oci/obsidian-headless/: Dockerfile
tools/rules_bun/bun/: BUILD.bazel  defs.bzl  extensions.bzl  materialize.bzl  providers.bzl  repositories.bzl  toolchain.bzl  versions.bzl
tools/rules_bun/bun/private/: BUILD.bazel  bun_binary.bzl  bun_binary.sh.tpl  bun_build.bzl  bun_build.sh.tpl  bun_build_test.bzl  bun_build_test.sh.tpl  bun_eslint_test.bzl  bun_eslint_test.sh.tpl  bun_install.bzl  bun_library.bzl  bun_prepared_tree.bzl  bun_prisma_generate.bzl  bun_test.bzl  bun_test.sh.tpl  materialize.bzl  prisma_versions.bzl  resolve_bun_info.bzl
(+4395 files in other folders)
