load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@bun_modules//:defs.bzl", "bun_link_all_packages")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//tools/bazel:semgrep.bzl", "semgrep_test")
load("//tools/bazel:trivy.bzl", "trivy_test")

bun_link_all_packages(name = "node_modules")

exports_files([
    "tsconfig.base.json",
    "package.json",
    "bun.lock",
] + glob(["patches/*.patch"]))

copy_to_bin(
    name = "tsconfig_base",
    srcs = ["tsconfig.base.json"],
    visibility = ["//visibility:public"],
)

# Security scanning targets

trivy_test(
    name = "trivy",
    srcs = [
        "bun.lock",
        "package.json",
    ],
    tags = [
        "manual",
        "security",
    ],
)

semgrep_test(
    name = "semgrep",
    srcs = [
        "package.json",
    ],
    tags = [
        "manual",
        "security",
    ],
)

# Quality scanning targets

sh_test(
    name = "knip",
    srcs = ["//tools/bazel:knip_runner.sh"],
    data = [
        "knip.json",
        "package.json",
        "//tools/bun",
    ],
    env = {
        "BUN_TOOL": "$(location //tools/bun)",
    },
    tags = [
        "lint",
        "manual",
    ],
)
