"""Monorepo Bazel module definition.

This configures bzlmod dependencies for building TypeScript packages with Bun,
Rust packages with rules_rust, and container images with rules_oci.
"""

module(
    name = "monorepo",
    version = "0.0.0",
)

# Core dependencies
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_shellcheck", version = "0.5.1")
bazel_dep(name = "rules_multitool", version = "1.11.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//:multitool.lock.json")
use_repo(multitool, "multitool")

# Rust (for clauderon)
bazel_dep(name = "rules_rust", version = "0.69.0")

# Container images
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")

# Python (transitive dep of rules_pkg; configured here for CI root-user support)
bazel_dep(name = "rules_python", version = "1.0.0")

##############################################################################
# Python toolchain (used transitively by rules_pkg)
##############################################################################

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

##############################################################################
# Rust toolchain
##############################################################################

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.88.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

##############################################################################
# Rust crate dependencies (crate_universe)
##############################################################################

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//packages/clauderon:Cargo.lock",
    manifests = ["//packages/clauderon:Cargo.toml"],
)

# rav1e's build script uses the `built` crate which requires many CARGO_PKG_* env vars.
crate.annotation(
    build_script_env = {
        "CARGO_PKG_AUTHORS": "rav1e contributors",
        "CARGO_PKG_DESCRIPTION": "The fastest and safest AV1 encoder",
        "CARGO_PKG_HOMEPAGE": "https://github.com/xiph/rav1e",
        "CARGO_PKG_REPOSITORY": "https://github.com/xiph/rav1e",
        "CARGO_PKG_LICENSE": "BSD-2-Clause",
    },
    crate = "rav1e",
)
use_repo(crate, "crates")

##############################################################################
# Native Bun toolchain (rules_bun)
##############################################################################

rules_bun = use_extension("//tools/rules_bun/bun:extensions.bzl", "bun")
rules_bun.toolchain(bun_version = "1.3.9")

register_toolchains(
    "@rules_bun_darwin_arm64//:bun_toolchain",
    "@rules_bun_darwin_amd64//:bun_toolchain",
    "@rules_bun_linux_arm64//:bun_toolchain",
    "@rules_bun_linux_amd64//:bun_toolchain",
)

use_repo(
    rules_bun,
    "rules_bun_darwin_amd64",
    "rules_bun_darwin_arm64",
    "rules_bun_linux_amd64",
    "rules_bun_linux_arm64",
)

##############################################################################
# Bun npm dependencies (replaces rules_js npm_translate_lock)
##############################################################################

bun_modules = use_extension("//tools/rules_bun/bun:extensions.bzl", "bun_modules")
bun_modules.install(
    name = "bun_modules",
    bins = {
        "typescript": [
            "tsc=./bin/tsc",
            "tsserver=./bin/tsserver",
        ],
    },
    bun_lock = "//:bun.lock",
    data = [
        "//:patches/monarch-money-api@0.0.5.patch",
        "//:patches/react-native-sound@0.13.0.patch",
        "//packages/homelab:patches/@digital-alchemy%2Ftype-writer@25.10.12.patch",
        "//packages/scout-for-lol:patches/satori@0.18.3.patch",
    ],
    package_jsons = [
        "//:package.json",
        "//packages/astro-opengraph-images:package.json",
        "//packages/better-skill-capped:package.json",
        "//packages/better-skill-capped/fetcher:package.json",
        "//packages/birmel:package.json",
        "//packages/bun-decompile:package.json",
        "//packages/clauderon/docs:package.json",
        "//packages/clauderon/web/client:package.json",
        "//packages/clauderon/web/frontend:package.json",
        "//packages/clauderon/web/shared:package.json",
        "//packages/cook-preview:package.json",
        "//packages/cooklang-for-obsidian:package.json",
        "//packages/discord-plays-pokemon:package.json",
        "//packages/discord-plays-pokemon/packages/backend:package.json",
        "//packages/discord-plays-pokemon/packages/common:package.json",
        "//packages/discord-plays-pokemon/packages/frontend:package.json",
        "//packages/eslint-config:package.json",
        "//packages/homelab:package.json",
        "//packages/homelab/src/cdk8s:package.json",
        "//packages/homelab/src/deps-email:package.json",
        "//packages/homelab/src/ha:package.json",
        "//packages/homelab/src/helm-types:package.json",
        "//packages/monarch:package.json",
        "//packages/resume:package.json",
        "//packages/scout-for-lol:package.json",
        "//packages/scout-for-lol/packages/backend:package.json",
        "//packages/scout-for-lol/packages/data:package.json",
        "//packages/scout-for-lol/packages/desktop:package.json",
        "//packages/scout-for-lol/packages/frontend:package.json",
        "//packages/scout-for-lol/packages/report:package.json",
        "//packages/scout-for-lol/packages/ui:package.json",
        "//packages/sentinel:package.json",
        "//packages/sentinel/web:package.json",
        "//packages/sjer.red:package.json",
        "//packages/starlight-karma-bot:package.json",
        "//packages/status-page/api:package.json",
        "//packages/status-page/web:package.json",
        "//packages/tasknotes-server:package.json",
        "//packages/tasknotes-types:package.json",
        "//packages/tasks-for-obsidian:package.json",
        "//packages/tools:package.json",
        "//packages/webring:package.json",
    ],
    pnpm_workspace = "//:pnpm-workspace.yaml",
)
use_repo(bun_modules, "bun_modules")

##############################################################################
# Container base images (rules_oci)
##############################################################################

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Bun runtime on Debian — used by birmel, sentinel, tasknotes-server
oci.pull(
    name = "bun_debian",
    digest = "sha256:d48b40bf0106dc1e94462c7086fbf4e8aab97f0870db2c87a05ecf8765f964df",
    image = "docker.io/oven/bun",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

# Bun runtime (Alpine) — used by starlight-karma-bot
oci.pull(
    name = "bun_alpine",
    digest = "sha256:b86c67b531d87b4db11470d9b2bd0c519b1976eee6fcd71634e73abfa6230d2e",
    image = "docker.io/oven/bun",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)

# Node.js slim — used by obsidian-headless
# Note: node images use variant=v8 for arm64, so we pull platform-specific digests.
oci.pull(
    name = "node_slim",
    digest = "sha256:dd9d21971ec4395903fa6143c2b9267d048ae01ca6d3ea96f16cb30df6187d94",
    image = "docker.io/library/node",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

# Python slim — used by dns-audit
oci.pull(
    name = "python_slim",
    digest = "sha256:6a27522252aef8432841f224d9baaa6e9fce07b07584154fa0b9a96603af7456",
    image = "docker.io/library/python",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

# Caddy Alpine — used by caddy-s3proxy
oci.pull(
    name = "caddy_alpine",
    digest = "sha256:fce4f15aad23222c0ac78a1220adf63bae7b94355d5ea28eee53910624acedfa",
    image = "docker.io/library/caddy",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "bun_alpine",
    "bun_alpine_linux_amd64",
    "bun_alpine_linux_arm64",
    "bun_debian",
    "bun_debian_linux_amd64",
    "bun_debian_linux_arm64",
    "caddy_alpine",
    "caddy_alpine_linux_amd64",
    "caddy_alpine_linux_arm64_v8",
    "node_slim",
    "node_slim_linux_amd64",
    "node_slim_linux_arm64_v8",
    "python_slim",
    "python_slim_linux_amd64",
    "python_slim_linux_arm64_v8",
)
