# Shared Bazel macros for the monorepo

load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_shellcheck//shellcheck:defs.bzl", "shellcheck_test")

exports_files([
    "bun_test_entry.cjs",
    "bun_test_runner.sh",
    "cargo_deny_runner.sh",
    "eslint_entry.cjs",
    "golangci_lint_runner.sh",
    "hermeticity_check.sh",
    "jscpd_runner.sh",
    "knip_runner.sh",
    "llvm_cov_runner.sh",
    "semgrep_runner.sh",
    "trivy_runner.sh",
    "typecheck_runner.sh",
    "workspace_status.sh",
])

sh_test(
    name = "hermeticity_check",
    srcs = ["hermeticity_check.sh"],
    data = glob([
        "*_runner.sh",
        "*.bzl",
    ]),
    tags = ["lint"],
)

sh_test(
    name = "bazel_lint_check",
    srcs = ["bazel_lint_check.sh"],
    tags = ["lint"],
)

shellcheck_test(
    name = "shellcheck",
    data = [
        "bun_test_runner.sh",
        "cargo_deny_runner.sh",
        "golangci_lint_runner.sh",
        "jscpd_runner.sh",
        "knip_runner.sh",
        "llvm_cov_runner.sh",
        "semgrep_runner.sh",
        "trivy_runner.sh",
        "typecheck_runner.sh",
        "workspace_status.sh",
    ],
    severity = "warning",
)
