# Bun toolchain package
# Provides a platform-aware alias to the Bun binary for use in genrules and sh_test:
#   tools = ["//tools/bun"], cmd = "$(location //tools/bun) ..."
#
# NOTE: config_settings here duplicate //tools/rules_bun/bun:BUILD.bazel.
# Both are needed: this package is for genrule/sh_test consumers via $(location),
# while rules_bun is for the native toolchain system.

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

alias(
    name = "bun",
    actual = select({
        ":macos_arm64": "@rules_bun_darwin_arm64//:bun",
        ":macos_x86_64": "@rules_bun_darwin_amd64//:bun",
        ":linux_arm64": "@rules_bun_linux_arm64//:bun",
        ":linux_x86_64": "@rules_bun_linux_amd64//:bun",
    }),
    visibility = ["//visibility:public"],
)
