# CI base image: oven/bun:debian + pre-installed static tool binaries.
# Eliminates per-step downloads of bazelisk, uv, target-determinator, and ripgrep.

load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

# Download static tool binaries and package into a tar layer.
genrule(
    name = "tools_layer",
    srcs = ["download_tools.sh"],
    outs = ["tools_layer.tar"],
    cmd = """
        EXECROOT=$$PWD && \
        OUTPUT_TAR=$$EXECROOT/$@ && \
        TMPDIR=$$(mktemp -d) && \
        trap 'rm -rf $$TMPDIR' EXIT && \
        bash $(location download_tools.sh) $$TMPDIR && \
        tar -cf $$OUTPUT_TAR -C $$TMPDIR usr/local/bin
    """,
    tags = ["requires-network"],
    target_compatible_with = ["@platforms//os:linux"],
)

# CI base image = bun_debian + tools layer
oci_image(
    name = "image",
    base = "@bun_debian",
    labels = {
        "org.opencontainers.image.title": "ci-base",
        "org.opencontainers.image.description": "CI base image with Bun, Bazelisk, uv, target-determinator, and ripgrep",
        "org.opencontainers.image.source": "https://github.com/shepherdjerred/monorepo",
    },
    target_compatible_with = ["@platforms//os:linux"],
    tars = [":tools_layer"],
    visibility = ["//visibility:public"],
)

# Tag template for stamped push
genrule(
    name = "image_tags_tmpl",
    outs = ["image_tags_tmpl.txt"],
    cmd = "echo '{STABLE_GIT_SHA}' > $@",
)

expand_template(
    name = "image_tags",
    out = "image_tags.txt",
    stamp_substitutions = {"{STABLE_GIT_SHA}": "{{STABLE_GIT_SHA}}"},
    template = ":image_tags_tmpl",
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ":image_tags",
    repository = "ghcr.io/shepherdjerred/ci-base",
    target_compatible_with = ["@platforms//os:linux"],
    visibility = ["//visibility:public"],
)
