"""Native Bun toolchain package for rules_bun."""

# Declare the toolchain type
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

# Platform config_settings for select()
# NOTE: These duplicate //tools/bun:BUILD.bazel config_settings.
# Both are needed: this package is for the native toolchain system,
# while tools/bun is for genrule/sh_test consumers via $(location).
config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "macos_x86_64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

# Platform-aware alias to the Bun binary
alias(
    name = "bun",
    actual = select({
        ":macos_arm64": "@rules_bun_darwin_arm64//:bun",
        ":macos_x86_64": "@rules_bun_darwin_amd64//:bun",
        ":linux_arm64": "@rules_bun_linux_arm64//:bun",
        ":linux_x86_64": "@rules_bun_linux_amd64//:bun",
    }),
    visibility = ["//visibility:public"],
)
